--- a/manifest.json
+++ b/manifest.json
@@ -52,10 +52,11 @@
         /* 小程序特有相关 */
         "appid" : "wx2cea00c8a8c241e9",
         "setting" : {
-            "urlCheck" : true,
+            "urlCheck" : false,
             "checkSiteMap" : false
         },
-        "usingComponents" : true
+        "usingComponents" : true,
+        "permission" : {}
     },
     "vueVersion" : "3"
 }
